2003-11-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* autogen.sh: Added script to generate all the auto* generated files.

	* config.guess config.sub depcomp install-sh mkinstalldirs missing:
	Removed machine generated files from CVS.
	
	* Makefile.am: Added the above files to be cleaned during 
	maintainer-clean

2003-10-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.1: Updated interactive section in man page a little. 

2003-10-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-drc2.scm, src/g_netlist.c: Applied Carlos' latest
	drc2 patch.  This fixed the slotting check and improved an error
	message from gnetlist.  Minor tweeks by Ales.

	* scheme/gnet-partslist-common.scm, gnet-partslist1.scm,
	gnet-partslist2.scm, gnet-partslist3.scm: Applied Stuart's 
	changes to these files.  Stuart just added the footprint attribute
	to the output.

	* src/s_netattrib.c: Per a user's complaint, fixed the 
	"Got an invalid net= attribute" to be a little more verbose.

2003-10-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.1: Fixed wrong command line option (-r is not a 
	valid option).  Pointed out by Stuart.

	* tests/hierarchy/*.sch *.sym: Updated to the latest sch/sym file
	format.

2003-10-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/vams_misc.c: Fixed up a call to o_attrib_get_name_value to
	use the new function signature.

	* src/g_rc.nw: Added the words optional and required to the 
	*rc log find messages.

	* src/s_rename.c, src/s_net.c, src/s_traverse.c: Removed all //
	comments (replaced with C comments).

2003-10-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* examples/*.sch: Updated all example schematics

	* configure.ac: Updated version to something more recent, but this
	version is not an official release.
	
2003-10-04 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to something more recent, but this
        version is not an official release.

2003-10-02 Ales Hvezda   <ahvezda@geda.seul.org>
